@@ -12,6 +12,7 @@
     * Improve the introduction text of /apps/update-notifier/auto_launch
     * Support for disabling GNOME login sound
     * Improve the introduction text of /apps/gdm/simple-greeter/disable_user_list
+    * Suggest to remove ubuntu-docs package to free 270M disk space.
 
 2010-07-23 Homer Xing <homer.xing@gmail.com>
 
